style :fix readability

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -57,9 +57,6 @@ header {
   color: $red;
   display: flex;
   justify-content: center;
-
-  // opacity: 0;
-  // transition: opacity 0.3s;
 }
 
 .check {
@@ -96,11 +93,8 @@ header {
 
 .input_box {
   @include CustomBtn($border_c: $purple, $padding: 10px 15px);
-  // position: relative;
   display: flex;
   align-items: center;
-  // width: 300px;
-  // border: 10px;
   border-radius: 10px;
   border-style: solid;
 }
@@ -112,8 +106,6 @@ textarea {
   @include CustomBtn($backc: $blue, $border_c: $purple, $padding: 10px 15px);
   color: $white;
   box-sizing: border-box;
-  // margin-top: 6px;
-  // margin-bottom: 16px;
   resize: none;
   overflow: hidden;
   max-width: 617px;
@@ -125,11 +117,8 @@ textarea {
 }
 
 .img_required {
-  // position: absolute;
   right: 10px;
   top: 40%;
-  // transform: translateY(-50%);
-
   border: none;
   border-radius: 50%;
 }
@@ -142,18 +131,10 @@ textarea::placeholder {
   opacity: 1;
 }
 
-.input_box:hover
-
-// input[type="text"]:hover,
-// input[type="email"]:hover,
-// textarea:hover
-{
+.input_box:hover {
   @include CustomBtn($backc: $blue, $border_c: $green, $padding: 10px 15px);
 }
 
-// input[type="text"]:focus,
-// input[type="email"]:focus,
-// textarea:focus
 .input_box:focus {
   @include CustomBtn($backc: $blue, $border_c: $green, $padding: 10px 15px);
 }
